# PotatoMail

./: .env.example  .gitignore  AUTH_SETUP.md  LICENSE  QUICK_START.md  README.md  SETUP_SCRIPTS.md  TODO.md  pyproject.toml  render.yaml  run.py  setup_appwrite.bat  setup_appwrite.py  setup_appwrite.sh
.github/workflows/: publish_python_package.yaml
app/: __init__.py  config.py
app/auth/: __init__.py  view.py
app/mail_service/: __init__.py  test.py  view.py
app/static/: style.css
app/templates/: base.html  dashboard.html  login.html  register.html
python_package/: pyproject.toml
python_package/src/potato_mail/: __init__.py
server/: .env.example  Dockerfile  create_user.py  main.py  migrate.py  pyproject.toml  test.html  vercel.json
server/lib/appwrite/: __init__.py
server/lib/auth/: __init__.py  routes.py  utils.py
server/lib/db/: repository.py  schema.py
server/lib/mail/: __init__.py  view.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: app.tsx  index.css  main.tsx
ui/src/lib/: auth.tsx
ui/src/routes/: __root.tsx  index.tsx  login.tsx
